made login page responsive

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Poppins:wght@500;900&display=swap"
         rel="stylesheet">
-<title>Vite + React</title>
+<title>Hostelify</title>
   </head>
   <body>
     <div id="root"></div>
